kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: flask
  name: flask
spec:
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    run: flask
  type: ClusterIP
