kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: web
  name: web
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    run: web
  type: NodePort
